@@ -1,3 +1,9 @@
+2006-12-07  Ross Burton  <ross@burtonini.com>
+
+	* help/manual/C/gtk-doc-manual.xml:
+	Add examples of how to document structs, properties and signals
+	(#383401).
+
 2006-12-04  Damon Chaplin  <damon@gnome.org>
 
 	* gtkdoc-scangobj.in: added a '--query-child-properties' argument to
